--- a/MidpointSonar/pom.xml
+++ b/MidpointSonar/pom.xml
@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <sonar.organization>hibiscus3000</sonar.organization>
+        <sonar.login>6a62038a9d65348801ff6fec6c75811e9a7b8989</sonar.login>
         <sonar.projectKey>Hibiscus3000_Midpoint-Sonar</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
