--- a/MidpointSonar/pom.xml
+++ b/MidpointSonar/pom.xml
@@ -15,7 +15,7 @@
 
         <sonar.organization>hibiscus3000</sonar.organization>
         <sonar.projectKey>Hibiscus3000_Midpoint-Sonar</sonar.projectKey>
-        <sonar.login>fbf8c63aa2e5387c39b6b87e069a6d1c772c4cc2</sonar.login>
+        <sonar.login>${SONAR_TOKEN_CMD}</sonar.login>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
