--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 19
-          distribution: 'openjdk'
+          distribution: 'openJDK'
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
