--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -10,7 +10,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main","MS-14--pom-surefire--github" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
