--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -27,9 +27,7 @@ jobs:
         java-version: '19'
         distribution: 'corretto'
         cache: maven
-    - name: Runt Test with Maven
-      run: mvn test --file pom.xml
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    
+    - name: Run Test with Maven
+      working-directory: MidpointSonar
+      run: mvn clean test 
