trying add maven in the image

--- a/MidpointSonar/Dockerfile
+++ b/MidpointSonar/Dockerfile
@@ -2,7 +2,7 @@ FROM eclipse-temurin:18-jdk-alpine as jar_builder
 WORKDIR /opt/MidpointSonar
 RUN apk update && apk upgrade && apk add git \
   && git clone https://github.com/Hibiscus3000/Midpoint-Sonar.git \
-  && maven clean install
+  && apk add maven && maven clean install
 
 FROM eclipse-temurin:18-jre-alpine
 WORKDIR /opt/MidpointSonar
