--- a/MidpointSonar/Dockerfile
+++ b/MidpointSonar/Dockerfile
@@ -9,4 +9,5 @@ FROM eclipse-temurin:19-jre-alpine
 WORKDIR /opt/Midpoint-Sonar/MidpointSonar
 COPY --from=jar_builder /opt/Midpoint-Sonar/MidpointSonar/target/*.jar /opt/Midpoint-Sonar/MidpointSonar/*.jar
 EXPOSE 15000
+VOLUME /midpoint_report
 ENTRYPOINT ["java", "-jar", "/opt/MidpointSonar/*.jar"]
