--- a/MidpointSonar/src/main/resources/application.yml
+++ b/MidpointSonar/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 15000
+
+spring:
+  datasource:
+    url: jdbc:mysql://root:Pf189Asstye8BRqLcxmQ@containers-us-west-35.railway.app:6033/railway
+    username: root
+    password: Pf189Asstye8BRqLcxmQ
+    driver-class-name: com.mysql.cj.jdbc.Driver
