--- a/MidpointSonar/pom.xml
+++ b/MidpointSonar/pom.xml
@@ -136,5 +136,10 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
