MS-47: test from

--- a/MidpointSonar/pom.xml
+++ b/MidpointSonar/pom.xml
@@ -156,6 +156,9 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.5.5.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 </project>
