added hibernate dependencies

--- a/MidpointSonar/docker-compose.yml
+++ b/MidpointSonar/docker-compose.yml
@@ -3,6 +3,9 @@ version: "3.9"
 services:
   midpoint_sonar:
     build: .
+    depends_on:
+      postgres:
+        condition: service_started
     networks:
       - net
     volumes:
